--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="home">
           <div class="about-title u-padding-top-bottom">
             <h1 class="heading-primary--main">Gideon Berridge</h1>
-            <h2 class="u-center-text heading-primary--sub">Front end developer</h2>
+            <h2 class="u-center-text heading-primary--sub">Full stack developer</h2>
           </div>
         </section>
         
@@ -75,7 +75,7 @@
                 <h4>About</h4>
                 <div class="">
                   <p class="about-sub">
-                    A full stack developer with 1 year experience working in front end looking for a new challenge in back end or a full stack position.
+                    A junior full stack developer with 1 year experience working in front end looking for a new challenge in back end or a full stack position.
                   </p>
                 </div>
                   <p style="text-align: left;">
