--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 I have experience of using Ruby on Rails, Python, JavaScript, React, HTML, CSS and Bootstrap and would be particularly interested in roles that expand my knowledge of back end languages or React.
 <br><br>Outside of coding I am passionate musician. I play several instruments and have an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician. I also love travel and tinkering with Arduinos and Raspberry Pi's.</p>
                 <p class="">
-                  <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
+                  <a href="./text/Gideon_Berridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
                 </p>
               </div>
