--- a/index.html
+++ b/index.html
@@ -75,14 +75,17 @@
                 <h4>About</h4>
                 <div class="">
                   <p class="about-sub">
-                    A junior full stack developer with 1 year experience working in front end looking for a new challenge in back end or a full stack position.
+                    A junior full stack developer with over a year's experience in front end looking for a new challenge in back end or a full stack position.
                   </p>
                 </div>
                   <p style="text-align: left;">
-                I have been working as a front end developer for a creative agency following some freelance work after completing a 6-month full stack developer boot camp. 
-                I have experience of using Ruby on Rails, Python, JavaScript, React, HTML, CSS and Bootstrap and would be particularly interested in roles that expand my knowledge of back end languages or React.
-<br><br>Outside of coding I am passionate musician. I play several instruments and have an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician. I also love travel and tinkering with Arduinos and Raspberry Pi's.</p>
-                <p class="">
+                    For the past year I have been working as a front end developer for a creative agency following some freelance work. Prior to this I completed a 6-month full stack developer boot camp having coded self taught for about five years. 
+                    <br><br>
+                    I have built projects using Ruby on Rails, Python, JavaScript, React, HTML, Sass and Bootstrap for clients such as Seagate and LaCie and I am currently looking for a new challenge in back end or full stack roles would be particularly interested in positions that expand my knowledge of Ruby, React or Python. 
+                    I am comfortable working remotely or hybrid in the London area
+                  <br><br>
+                    Outside of coding I am passionate musician. I play several instruments and have an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician. I also love travel and tinkering with Arduinos and Raspberry Pi's.</p>
+                  <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
                 </p>
