--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         src="./img/github.svg" alt="GitHub icon" class="u-filter-invert"></a>
                   </div>
 
-                  <div class="slide">
+                  <!-- <div class="slide">
                     <a href="http:\\officialrefuge.com" target="blank" class=" projects__card projects projects__card--slider">
                       <img src="img/refuge_screenshot.jpg" alt="Refuge band homepage screenshot" class="projects__img" />
                       <h2 class="projects__caption">Refuge</h2>
@@ -147,7 +147,7 @@
                     </a>
                     <a href="https://github.com/GidBerridge/refuge_band_website" target="blank" class="slider__icon"><img
                         src="./img/github.svg" alt="GitHub icon" class="u-filter-invert"></a>
-                  </div>
+                  </div> -->
 
                   <div class="slide">
                     <a href="https://gideonberridge.com" target="blank" class=" projects__card projects projects__card--slider">
